feat: add public coupon APIs
